[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game_Scenes/Sound_Manager.gd" type="Script" id=1]
[ext_resource path="res://Sounds/item2.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/item3.wav" type="AudioStream" id=3]

[node name="Sound_Manager" type="Node2D"]
script = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="item_drop" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource( 2 )
volume_db = -20.0
mix_target = 2

[node name="item_grab" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource( 3 )
volume_db = -20.0
mix_target = 2

[node name="Coins" type="Node" parent="."]

[node name="Coin_Ticker" type="Timer" parent="."]
wait_time = 0.08
one_shot = true
[connection signal="timeout" from="Coin_Ticker" to="." method="play_next_coin"]
